@@ -92,13 +92,23 @@ stopifnot(identical(dbExistsTable(con,tname),FALSE))
 # test csv import
 file <- tempfile()
 write.table(iris,file,sep=",")
+tname2 <- "Need to quote this table name"
 monetdb.read.csv(con,file,tname)
+monetdb.read.csv(con,file,tname2)
+###
+dbListTables(con)
+
 unlink(file)
 stopifnot(identical(dbExistsTable(con,tname),TRUE))
+stopifnot(identical(dbExistsTable(con,tname2),TRUE))
 iris3 <- dbReadTable(con,tname)
+iris4 <- dbReadTable(con,tname2)
 stopifnot(identical(dim(iris),dim(iris3)))
+stopifnot(identical(dim(iris),dim(iris4)))
 stopifnot(identical(dbListFields(con,tname),names(iris)))
+stopifnot(identical(dbListFields(con,tname2),names(iris)))
 dbRemoveTable(con,tname)
+dbRemoveTable(con,tname2)
 stopifnot(identical(dbExistsTable(con,tname),FALSE))
 
 # test dbWriteTable
