@@ -30,12 +30,18 @@ stderr of test 'dbi` in directory 'clients/R` itself:
 # 12:27:25 >  "R" "--vanilla" "--slave" "--args" "31728"
 # 12:27:25 >  
 
-Identifier(s) Sepal.Length, Sepal.Width, Petal.Length, Petal.Width, Species contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
-Identifier(s) Sepal.Length, Sepal.Width, Petal.Length, Petal.Width, Species contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
-Identifier(s) some.dot contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
-Identifier(s) year, month, day are reserved SQL keywords and need(s) to be quoted in queries.
-Identifier(s) sch.wide, comp.imp, yr.rnd, acs.k3, acs.46, acs.core, pct.resp, not.hsg, some.col, col.grad, grad.sch, avg.ed, api.stu contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
-Identifier(s) full are reserved SQL keywords and need(s) to be quoted in queries.
+Identifier(s) "Sepal.Length", "Sepal.Width", "Petal.Length", "Petal.Width", "Species" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Sepal.Length", "Sepal.Width", "Petal.Length", "Petal.Width", "Species" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Need to quote this table name" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Sepal.Length", "Sepal.Width", "Petal.Length", "Petal.Width", "Species" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Need to quote this table name" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Need to quote this table name" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Need to quote this table name" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "Need to quote this table name" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "some.dot" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "year", "month", "day" are reserved SQL keywords and need(s) to be quoted in queries.
+Identifier(s) "sch.wide", "comp.imp", "yr.rnd", "acs.k3", "acs.46", "acs.core", "pct.resp", "not.hsg", "some.col", "col.grad", "grad.sch", "avg.ed", "api.stu" contain uppercase or reserved SQL characters and need(s) to be quoted in queries.
+Identifier(s) "full" are reserved SQL keywords and need(s) to be quoted in queries.
 
 # 12:27:27 >  
 # 12:27:27 >  "Done."
