@@ -53,6 +53,9 @@ Ready.
 [1] TRUE
 [1] TRUE
 [1] 150
+[1] 150
+[1] "monetdbtest"                       "\"Need to quote this table name\""
+[1] TRUE
 [1] TRUE
 [1] TRUE
 [1] TRUE
