@@ -9,7 +9,9 @@
 - Fix for empty result set on dbGetQuery(), no longer returning NULL (Thanks, Fabian)
 - Fix for dbConnect(), it ignored the url parameter somehow, which broke some sqlsurvey (Thanks, Anthony)
 - Added col.names argument to monet.read.csv()
+- Added lower.case.names argument to monet.read.csv() in case users want to avoid quoting (a bit)
 - Fix for dbConnect() that should be more robust to invalid connections
+- Cleaned up quoting behavior in dbListTables(), dbRemoveTable() etc.
 
 0.9.7
 - Fixed crash on Windows (Sorry, everyone)
